<resources>
    <string name="app_name">My Application</string>
    <string name="City">Tampere</string>
    <string name="Description">Sunny</string>
    <string name="searchbutton">Foreca</string>
    <string name="settings">Settings</string>
    <string name="units">Units:</string>
    <string name="save_settings">Save settings</string>
    <string name="Temperature">+30</string>
    <string name="Windspeed">4 m/s</string>
    <string name="temperature_label">Temperature</string>
    <string name="description_label">Description</string>
    <string name="wind_speed_label">Wind speed</string>
</resources>